# AutoDiary

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  asim_ppt_details.md  autodiary.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
Project-Details/: Generate leads with Google Maps (2).json  person1_diary_entries.json  person1_n8n_entries.json  person2_diary_entries.json  person2_n8n_entries.json  person3_diary_entries.json  person3_n8n_entries.json
config/: settings.example.json  skills_mapping.json
docs/: DEVELOPMENT.md  IMPROVEMENTS.md  QUICKSTART.txt  TROUBLESHOOTING.txt
entries/: diary_entries.example.json
previous_entries/: all_entries.json  raw_api_response.json
scripts/: fetch_previous_entries.py  upload_diaries.py  validate_skills_mapping.py
src/autodiary/: __init__.py  __main__.py
src/autodiary/cli/: __init__.py  config_menu.py  main_menu.py  upload_menu.py  utils.py  view_menu.py
src/autodiary/core/: __init__.py  client.py  config.py
src/autodiary/models/: __init__.py  api.py  config.py  entry.py
src/autodiary/resources/templates/: config_template.json  entries_README.txt  entries_template.json
src/autodiary/utils/: __init__.py  crypto.py  validators.py
tests/: test_bug_fixes.py  test_client.py  test_code_quality_fixes.py  test_config.py  test_coverage_gaps.py  test_crypto.py  test_entry.py  test_missing_features.py  test_security_fixes.py  test_validators.py
