[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodiary"
version = "1.0.0"
description = "VTU Internship Diary Auto Filler User Friendly Console Application"
authors = [
    { name = "VTU Auto Diary Team" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
autodiary = "autodiary.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autodiary"]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatting)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=pytest_temp"
